ms-card/src/main/java/com/example/mscard/error/CardAlreadyExistsException.java
package com.example.mscard.error;

public class CardAlreadyExistsException extends CommonException{
    public CardAlreadyExistsException(String errorMessage) {
        super(ErrorCodes.CARD_EXISTS, errorMessage);
    }
}
